crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_let-eq-lit.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: let x = 42
---
NodeRoot@0..10
  NodeApply@0..10
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..10
      NodeLiteral@8..10
        NodeLiteralValue@8..10
          Integer@8..10 "42"
