crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_let-op-or.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: let x = a || b
---
NodeRoot@0..14
  NodeApply@0..14
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "x"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..14
      NodeApply@8..14
        NodeApplyArgument@8..10
          Identifier@8..9 "a"
          Space@9..10 " "
        NodeApplyReceiver@10..12
          PipePipe@10..12 "||"
        Space@12..13 " "
        NodeApplyArgument@13..14
          Identifier@13..14 "b"
