crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_lit-int.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "1234"
---
NodeRoot@0..4
  NodeLiteral@0..4
    NodeLiteralValue@0..4
      Integer@0..4 "1234"
