crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_lit-multi-line.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "let a = 1\nlet b = 2"
---
NodeRoot@0..19
  NodeApply@0..10
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyReceiver@0..4
          Identifier@0..3 "let"
          Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "a"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Equal@6..7 "="
    Space@7..8 " "
    NodeApplyArgument@8..10
      NodeLiteral@8..9
        NodeLiteralValue@8..9
          Integer@8..9 "1"
      Newline@9..10 "\n"
  NodeApply@10..19
    NodeApplyArgument@10..16
      NodeApply@10..16
        NodeApplyReceiver@10..14
          Identifier@10..13 "let"
          Space@13..14 " "
        NodeApplyArgument@14..16
          Identifier@14..15 "b"
          Space@15..16 " "
    NodeApplyReceiver@16..17
      Equal@16..17 "="
    Space@17..18 " "
    NodeApplyArgument@18..19
      NodeLiteral@18..19
        NodeLiteralValue@18..19
          Integer@18..19 "2"
