crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_lit-multiline-string.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: "\"\nhello\nworld!\n\""
---
NodeRoot@0..16
  NodeLiteral@0..16
    StringStart@0..1 "\""
    NodeLiteralValue@1..15
      StringContent@1..15 "\nhello\nworld!\n"
    StringEnd@15..16 "\""
