crates/cadenza-syntax/src/snapshots/cadenza_syntax__parse__tests__example_op-mul-add.snap
---
source: crates/cadenza-syntax/src/parse.rs
expression: a * b + c
---
NodeRoot@0..9
  NodeApply@0..9
    NodeApplyArgument@0..6
      NodeApply@0..6
        NodeApplyArgument@0..2
          Identifier@0..1 "a"
          Space@1..2 " "
        NodeApplyReceiver@2..3
          Star@2..3 "*"
        Space@3..4 " "
        NodeApplyArgument@4..6
          Identifier@4..5 "b"
          Space@5..6 " "
    NodeApplyReceiver@6..7
      Plus@6..7 "+"
    Space@7..8 " "
    NodeApplyArgument@8..9
      Identifier@8..9 "c"
